ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/What_s_Happening__c.object-meta.xml
<CustomObject>
    <description>This object contains content to generate quick view cards of current events and activities within the community.</description>
    <label>What&apos;s Happening</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>What&apos;s Happening</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>