ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/fields/Content_Language__c.field-meta.xml
<CustomField>
    <fullName>Content_Language__c</fullName>
    <label>Content Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Operating_Languages</valueSetName>
    </valueSet>
</CustomField>