ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/fields/Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Id__c</fullName>
    <label>Image Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>