ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/fields/Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Link_Type__c</fullName>
    <label>Link Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Email To</fullName>
            </value>
            <value>
                <fullName>No Link</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
                <isActive>false</isActive>
                <label>Document</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>