ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/fields/Publish_in__c.field-meta.xml
<CustomField>
    <fullName>Publish_in__c</fullName>
    <description>This field allowes to the user to select in which communities he wants the what&apos;s happening publication to be published</description>
    <inlineHelpText>Please select in which community you want to publish your &quot;what&apos;s happening&quot; publication. Multi selection is alowed.</inlineHelpText>
    <label>Publish in</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CommunityName</valueSetName>
    </valueSet>
</CustomField>