ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/validationRules/Validate_Email_Label.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Email_Label</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Link_Type__c, &apos;No Link&apos;)),
ISBLANK(Link_Label__c) 
)</errorConditionFormula>
    <errorDisplayField>Link_Label__c</errorDisplayField>
    <errorMessage>Be sure to fill in the Link Label when you select a Link Type</errorMessage>
</ValidationRule>