ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/validationRules/Validate_Email_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Email_Link</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Link_Type__c, &apos;Email To&apos;),
ISBLANK(Email_Recipient__c) 
)</errorConditionFormula>
    <errorDisplayField>Email_Recipient__c</errorDisplayField>
    <errorMessage>Be sure to fill in the appropriate fields based on the link type selected.</errorMessage>
</ValidationRule>