ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/validationRules/Validate_External_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_External_Link</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Link_Type__c, &apos;External&apos;),
ISBLANK(External_Link__c) 
)</errorConditionFormula>
    <errorDisplayField>External_Link__c</errorDisplayField>
    <errorMessage>Be sure to fill in the appropriate fields based on the link type selected.</errorMessage>
</ValidationRule>