ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/What_s_Happening__c/validationRules/Validate_Internal_Link_Community.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Internal_Link_Community</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Link_Type__c, &apos;Internal&apos;),
ISBLANK(Internal_Community_Link__c) 
)</errorConditionFormula>
    <errorDisplayField>Internal_Community_Link__c</errorDisplayField>
    <errorMessage>Be sure to fill in the appropriate fields based on the link type selected.</errorMessage>
</ValidationRule>